# enigma2-openpli-fulan-SI2

./: configure.ac
lib/driver/: vfd.cpp
lib/dvb/: streamserver.cpp
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/CuberevoVFD/: plugin.py
lib/python/Plugins/Extensions/SocketMMI/meta/: Makefile  Makefile.in
lib/python/Plugins/Extensions/TopfieldVFD/: plugin.py
lib/python/Plugins/Extensions/adb_5800VFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/adb_5800VFD/locale/: Makefile.am
lib/python/Plugins/Extensions/adb_5800VFD/meta/: plugin_vfd-icons.xml
lib/python/Plugins/Extensions/fs9000VFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/fs9000VFD/locale/: Makefile.am
lib/python/Plugins/Extensions/hchsxx00VFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/hchsxx00VFD/locale/: Makefile.am
lib/python/Plugins/Extensions/hchsxx00VFD/meta/: plugin_vfd-icons.xml
lib/python/Plugins/Extensions/hs7110VFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/hs7110VFD/locale/: Makefile.am
lib/python/Plugins/Extensions/hs742xVFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/hs742xVFD/locale/: Makefile.am
lib/python/Plugins/Extensions/hs7810aVFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/hs7810aVFD/locale/: Makefile.am
lib/python/Plugins/Extensions/hs8200VFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/hs8200VFD/locale/: Makefile.am
lib/python/Plugins/Extensions/hs9510VFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/hs9510VFD/locale/: Makefile.am
lib/python/Plugins/Extensions/opt9600VFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/opt9600VFD/locale/: Makefile.am
lib/python/Plugins/Extensions/pace7241VFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/spark7162VFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/sparkVFD/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/ufs9xxVFD/: Makefile.am  plugin.py
(+58 files in other folders)
